[UPD] Base line

--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,20 @@
     padding: 0;
     border: border-box;
 }
+/*header*/
+
+/*Main*/
+
+/*Footer*/
+
+
+
+
+/*Utility*/
+
+.open-sansus{
+    font-family: "Open Sans", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+
