--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,50 @@ header{
     top: 1;
     background-color: rgb(255, 255, 255);
     width: 100%;
-}
-
-.margin-20{
-    margin: 20px;
+    z-index: 1;
+    
 }
 
 /*Main*/
 
 main{
-    background-color: black;
+    background-color: rgb(20, 141, 197);
+}
+
+.container{
+    max-width: 900px;
+    padding-top: 80px;
+    background-color: rgba(42, 165, 42, 0.788);
+}
+
+.content{
+    width:50%;
+}
+.content-space{
+    width:30%;
+}
+
+.content1{
+    width: 100%;
 }
 
 /*Footer*/
 footer{
     background-color: purple;
+}
+.r-position{
+    position: relative;
+    top: 100px;  right: 30px;
+}
+
+.r-position-txt{
+    position: relative;
+    top: 55px; 
+}
+
+.r-position-arrow{
+    position: relative;
+    top: 75px;
 }
 
 
@@ -35,10 +64,39 @@ footer{
     font-style: normal;
 }
 
+.n-position{
+    position: none;
+}
+
+.font-title{
+    font-size: 60px;
+}
+
+
+.font-s{
+    font-size: xx-large;
+    margin-bottom: 0px;
+}
+
+.wrap{
+    flex-wrap: wrap;
+}
+
 .d-inline-block{
     display: inline-block;
 }
 
+.flex-grow{
+    flex-grow: 3
+}
+
+.f-column{
+    flex-direction: column;
+}
+
+.f-row{
+    flex-direction: row;
+}
 
 .d-flex{
     display: flex;
@@ -52,6 +110,35 @@ footer{
     text-align: right;
 }
 
+.j-between{
+    justify-content: space-between;
+}
+
+.j-centre{
+    justify-content:center;
+}
+
+.margin-20{
+    margin: 20px;
+}
+
+.margind-b-60{
+    margin: 60px;
+}
+
+.padding-left-right{
+    padding-left: 5px;
+    right: 5px:
+}
+
+.t-alin-l{
+    text-align: start;
+}
+
+.padding-10{
+    padding: 10px;
+}
+
 /*color*/
 
 .bcolor-red{
@@ -59,16 +146,15 @@ footer{
 }
 
 .bcolor-blu{
-    background-color: blue;
+    background-color: rgb(0, 153, 255);
+    border-color: rgba(0, 153, 255, 0.5);
 }
 
 .bcolor-green{
     background-color: green;
 }
 
-.j-between{
-    justify-content: space-between;
-}
+
 .color-white{
     color: white;
 }
