--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@ header{
 /*Main*/
 
 main{
-    background-color: rgb(20, 141, 197);
+    
 }
 
 .container{
-    max-width: 900px;
+    max-width:900px;
     padding-top: 80px;
     background-color: rgba(42, 165, 42, 0.788);
 }
@@ -37,9 +37,8 @@ main{
     width: 100%;
 }
 
-/*Footer*/
-footer{
-    background-color: purple;
+.content2{
+    width: 70%;
 }
 .r-position{
     position: relative;
@@ -54,6 +53,18 @@ footer{
 .r-position-arrow{
     position: relative;
     top: 75px;
+}
+
+.back-partner{
+    background-image: url(../img/partner.png);
+    background-size: cover;
+    height: 400px;
+}
+
+
+/*Footer*/
+footer{
+    background-color: purple;
 }
 
 
@@ -78,6 +89,12 @@ footer{
     margin-bottom: 0px;
 }
 
+.font-text{
+    font-size: large;
+    margin-bottom: 0px;
+}
+
+
 .wrap{
     flex-wrap: wrap;
 }
@@ -91,6 +108,7 @@ footer{
 }
 
 .f-column{
+    display: flex;
     flex-direction: column;
 }
 
@@ -118,12 +136,19 @@ footer{
     justify-content:center;
 }
 
+.j-content{
+    justify-content: space-around;
+}
+
 .margin-20{
     margin: 20px;
 }
 
 .margind-b-60{
     margin: 60px;
+}
+.margind-top-80{
+    margin-top: 80px;
 }
 
 .padding-left-right{
@@ -137,6 +162,10 @@ footer{
 
 .padding-10{
     padding: 10px;
+}
+.padding-0{
+    padding-left: 0px;
+    padding-right: 0ppx;
 }
 
 /*color*/
@@ -154,6 +183,9 @@ footer{
     background-color: green;
 }
 
+.bcolor-white{
+    background-color: white;
+}
 
 .color-white{
     color: white;
@@ -162,3 +194,13 @@ footer{
     background-color: rgba(240, 248, 255, 0);
     border-color: rgba(255, 0, 0, 0);
 }
+
+.b-jumbo{
+    background-color: rgb(20, 141, 197);
+}
+
+.bcolor-pink{
+    background-color: rgb(156, 20, 197);
+}
+
+
