--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ main{
 }
 
 .container{
-    max-width:900px;
     padding-top: 80px;
     background-color: rgba(42, 165, 42, 0.788);
 }
@@ -59,6 +58,7 @@ main{
     background-image: url(../img/partner.png);
     background-size: cover;
     height: 400px;
+    
 }
 
 
@@ -70,6 +70,11 @@ footer{
 
 
 /*Utility*/
+
+.max-width{
+    max-width:900px;
+}
+
 .open-sansus{
     font-family: "Open Sans", serif;
     font-style: normal;
@@ -144,6 +149,10 @@ footer{
     margin: 20px;
 }
 
+.margin-10{
+    margin: 10px;
+}
+
 .margind-b-60{
     margin: 60px;
 }
@@ -202,5 +211,15 @@ footer{
 .bcolor-pink{
     background-color: rgb(156, 20, 197);
 }
+
+.bcolor-grey{
+    background-color: rgb(147, 146, 148);
+}
+
+.color-blue{
+    color: blue;
+}
+
+
 
 
