--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ main{
     width:30%;
 }
 
+.content-space1{
+    width: 25%;
+    padding: 20px;
+    margin-top: 0px;
+}
+
 .content1{
     width: 100%;
 }
@@ -159,10 +165,23 @@ footer{
 .margind-top-80{
     margin-top: 80px;
 }
+.margin-top-30{
+    margin-top: 30px;
+}
+.margin-top-10{
+    margin-top: 10px;
+}
 
 .padding-left-right{
     padding-left: 5px;
     right: 5px:
+}
+
+.padding-top-right-bottom{
+    padding-bottom: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+
 }
 
 .t-alin-l{
@@ -175,6 +194,23 @@ footer{
 .padding-0{
     padding-left: 0px;
     padding-right: 0ppx;
+}
+
+.padding-b{
+    padding-bottom: 20px;
+}
+
+.list-style-none{
+    list-style: none;
+}
+
+.border{
+    border: solid 1px rgb(112, 111, 111);
+}
+
+.border-bottom{
+    border-bottom: solid 1px grey;
+    
 }
 
 /*color*/
@@ -219,6 +255,12 @@ footer{
 .color-blue{
     color: blue;
 }
+.color-grey{
+    color: grey;
+}
+
+
+
 
 
 
