--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ header{
     background-color: rgb(255, 255, 255);
     width: 100%;
     z-index: 1;
-    
 }
 
 /*Main*/
@@ -23,6 +22,14 @@ main{
 .container{
     padding-top: 80px;
     background-color: rgba(42, 165, 42, 0.788);
+}
+
+.card-before{
+  padding-left: 10px;
+}
+
+.card-before::before{
+    content:"<i class="fa-solid fa-circle-nodes"></i>"
 }
 
 .content{
@@ -216,6 +223,8 @@ footer{
 .list-style-none{
     list-style: none;
 }
+
+:before
 
 .border{
     border: solid 1px rgb(112, 111, 111);
