--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,10 @@ main{
 
 .container{
     padding-top: 80px;
-    background-color: rgba(42, 165, 42, 0.788);
 }
 
 .card-before{
   padding-left: 10px;
-}
-
-.card-before::before{
-    content:"<i class="fa-solid fa-circle-nodes"></i>"
 }
 
 .content{
@@ -58,7 +53,7 @@ main{
 }
 .r-position{
     position: relative;
-    top: 100px;  right: 30px;
+    top: 103px;  right: 25px;
 }
 
 .r-position-txt{
@@ -81,7 +76,7 @@ main{
 
 /*Footer*/
 footer{
-    background-color: purple;
+    background-color: rgb(29, 28, 29);
 }
 
 
@@ -186,6 +181,11 @@ footer{
 .margind-top-80{
     margin-top: 80px;
 }
+
+.margind-bottom-80{
+    margin-bottom: 80px;
+}
+
 .margin-top-30{
     margin-top: 30px;
 }
@@ -207,7 +207,7 @@ footer{
 .padding-top-right-bottom-40{
     padding-bottom: 50px;
     padding-right: 55px;
-    padding-top: 50px;
+    padding-top: 50px; 
 }
 
 .padding-10{
@@ -226,8 +226,6 @@ footer{
     list-style: none;
 }
 
-:before
-
 .border2{
     border: solid 1px rgb(112, 111, 111);
 }
@@ -241,8 +239,12 @@ footer{
     border-bottom: solid 1px grey;  
 }
 
+.border-top1{
+    border-top: solid 1px gray;
+}
+
 .border-top{
-    border-top: solid 1px rgb(248, 246, 246);  
+    border-top: solid 1px rgb(248, 246, 246); opacity: 1; 
 }
 
 /*color*/
@@ -273,7 +275,17 @@ footer{
 }
 .trasparente{
     background-color: rgba(240, 248, 255, 0);
-    border-color: rgba(255, 0, 0, 0);
+    border-bottom: rgba(255, 0, 0, 0);
+    border-right: rgba(255, 0, 0, 0);
+    border-top: rgba(255, 0, 0, 0);
+    border-left: rgba(255, 0, 0, 0);
+}
+
+.trasparente1{
+    background-color: rgba(240, 248, 255, 0);
+    border-bottom: rgba(255, 0, 0, 0);
+    border-right: rgba(255, 0, 0, 0);
+    border-left: rgba(255, 0, 0, 0);
 }
 
 .b-jumbo{
